--- a/index.html
+++ b/index.html
@@ -4,10 +4,85 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Learn Wild Animals</title>
+    <title>Animalia</title>
     <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
+
+    <header>
+        <h1>Animalia</h1>
+        <h2>Learn about wild animals</h2>
+    </header>
+
+    <main>
+        <!-- Description section -->
+        <section>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aperiam eum aliquid deserunt tempore sapiente repudiandae fugit recusandae, laudantium suscipit id quae voluptate hic, sed excepturi veniam asperiores. Quia, nostrum cupiditate!</p>
+        </section>
+
+        <!-- User interaction section -->
+        <section>
+            <form action="">
+
+                <fieldset>
+
+                    <label for="animal-type">Select the animal type</label>
+                    <select name="animal-type" id="animal-type">
+                        <option value="" disabled selected>Select the animal type</option>
+                        <option value="amphibian">Amphibian</option>
+                        <option value="bird">Bird</option>
+                        <option value="fish">Fish</option>
+                        <option value="mammal">Mammal</option>
+                        <option value="marsupial">Marsupial</option>
+                        <option value="reptile">Reptile</option>
+                    </select>
+
+                    <label for="active-time">Select the active time</label>
+                    <select name="active-time" id="active-time">
+                        <option value="" disabled selected>Select the active time</option>
+                        <option value="diurnal">Diurnal</option>
+                        <option value="nocturnal">Nocturnal</option>
+                    </select>
+
+                </fieldset>
+
+                <button type="submit">Give me a random animal!</button>
+
+            </form>
+        </section>
+
+        <!-- DOM element inserted dynamically by JS going below -->
+        <section>
+
+            <div>
+
+                <ul>
+
+                </ul>
+
+            </div>
+
+        </section>
+
+        <!-- Stretch goal content will be added here -->
+        <section>
+
+            <div>
+
+                <ul>
+
+                </ul>
+
+            </div>
+
+        </section>
+
+    </main>
+
+    <footer>
+        <p>Created at <a href="https://junocollege.com/" target="_blank">Juno College</a> by Alix & Chris / Courtesy of <a href="http://zoo-animal-api.herokuapp.com/" target="_blank">Zoo Animal API</a></p>
+    </footer>
+
     <script src="./script.js"></script>
 </body>
 </html>
