added event listener on form

--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
                         <option value="nailpolish">Nailpolish</option>
                     </select>
 
+                </fieldset>
+
+                <fieldset>
+
                     <label for="product-tag">Select the product tag</label>
                     <select name="product-tag" id="product-tag">
                         <option value="" disabled selected>Select the product tag</option>
